# ifpe-calculadora-de-frete

./: .coverage  README.md  pyproject.toml  run_test_cov.bat  run_test_cov.sh
src/: main.py
src/calculadora_frete/: CalculadoraFrete.py
tests/: test_calculadora_frete.py
