[project]
name = "calculadora-frete"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest-cov>=6.2.1",
]

[tool.uv.scripts]
test-cov = "pytest --cov=CalculadoraFrete --cov-report=term-missing --cov-report=html tests/"

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
